# langbro

./: .dockerignore  .env.example  .gitignore  Makefile
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/app/: mod.rs
backend/src/app/account/: mod.rs
backend/src/app/api/: mod.rs
backend/src/app/api/graphql/: mod.rs
backend/src/app/api/security/: auth.rs
backend/src/app/core/: context.rs  error.rs
backend/src/app/db/: neo4j.rs
backend/src/app/gateway/: mod.rs  schema.rs
backend/src/app/messenger/: chat.rs  message.rs
backend/src/app/profile/: mod.rs
backend/src/app/utils/: mod.rs  regex.rs  validation.rs
backend/src/core/: error.rs  language.rs  mod.rs  regex.rs  validation.rs
backend/src/db/: mod.rs
backend/src/model/: mod.rs
backend/src/model/chat/: chat_model.rs  message_model.rs  mod.rs
backend/src/model/language/: language_error.rs  language_model.rs  language_mutation.rs  mod.rs
backend/src/model/profile/: mod.rs  profile_connections.rs  profile_error.rs  profile_model.rs  profile_mutation.rs  profile_node.rs  profile_repository.rs  profile_resolver.rs  profile_service.rs
ci/docker/: backend.Dockerfile  docker-compose.yml
ci/scripts/: env_init.sh  languages_set.sh  mongodb_init.sh  neo4j_init.cypher
data/: languages.csv
