[package]
name = "langbro"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-argon2 = "1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
juniper = "0.15.9"
dotenv = "0.15.0"
serde_json = "1.0.82"
actix-web = "4.1.0"
actix-cors = "0.5"
actix-web-lab = "0.16"
validator = { version = "0.15", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.139", features = ["derive"] }

[dependencies.mongodb]
tokio = "1.20.0"
futures = "0.3.21"
version = "2.2.2"
features = ["sync"]
default-features = false