[package]
name = "langbro"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-argon2 = "1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1"
juniper = "0.15.9"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.82"
actix-web = "4.1.0"
actix-cors = "0.5"
actix-web-lab = "0.16"
lingua = "1.4.0"
validator = { version = "0.15", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.139", features = ["derive"] }

[dependencies.mongodb]
version = "2.2.2"
features = ["sync"]
default-features = false