[package]
name = "langbro"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

anyhow = "1.0"
async-trait = "0.1.42"
lazy_static = "1.4.0"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4.0"

rand = "0.8.4"
rust-argon2 = "1.0"

lingua = "1.4.0"
regex = "1"
thiserror = "1.0.31"
validator = { version = "0.15", features = ["derive"] }

strum = "0.24.1"
strum_macros = "0.24.2"

neo4j_cypher = { version = "0.2", features=[ "derive", "templates" ] }
neo4rs = { branch = "master", git = "https://github.com/I0HuKc/neo4rs"}
async-graphql = "4.0.5"
serde_json = "1.0.82"
serde = { version = "1.0.139", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
jsonwebtoken = "8.1.1"

actix-web = "4.1.0"
actix-rt = "2.7.0"
actix-web-actors = "4.1.0"
async-graphql-actix-web = "4.0.5"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]